Set a fixed height for the menu bar - was too small on the login page.

--- a/yukon-client/yukon-web/WebContent/WebConfig/yukon/styles/StandardStyles.css
+++ b/yukon-client/yukon-web/WebContent/WebConfig/yukon/styles/StandardStyles.css
@@ -63,6 +63,7 @@ body {
     font-weight: bold;
     color: white;
     font-size: .85em;
+    height: 1.75em;
 }
 
 #Menu #topMenu .stdhdr_leftSide{
